# mechferret

./: .editorconfig  .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  SUPPORT.md  bitacora.md  install.sh  instructions.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLI.md  CLI_EXAMPLES.md  DEMO_SCRIPT.md
mechferret/: __init__.py  agent.py  agents.py  audit.py  cli.py  cluster.py  commands.py  config.py  controller.py  coordinator.py  costs.py  defaults.py  demo.py  discovery.py  goal_loop.py  hooks.py  knowledge.py  llm.py  mcp.py  memory.py  modal_app.py  models.py  openvla_sae.py  ops.py  paper.py  permissions.py  picker.py  policy.py  provenance.py  registry.py  repl.py  report.py  retrieval.py  sessions.py  skills.py  sources.py  spinner.py  text.py  tools.py  tracing.py
mechferret.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mechferret/interp/: __init__.py  backends.py  critic.py  engine.py  hypotheses.py  synthetic.py  tasks.py
mechferret/seed_corpus/: hackathon_brief.md  interpretability_circuits.md  modal_openai_raindrop.md
mechferret/skills/: factual-recall-trace.json  find-induction-heads.json  ioi-circuit.json  logit-lens-sweep.json
mechferret/templates/openvla_sae/: README.md
mechferret/templates/openvla_sae/configs/: phase1.yaml
mechferret/templates/openvla_sae/paper/: outline.md
mechferret/templates/openvla_sae/scripts/: install_openvla_min.sh  phase1_commands.sh
mechferret/templates/openvla_sae/src/: cache_openvla_activations.py  simple_topk_sae.py  train_sae_from_cache.py
projects/openvla_sae/: README.md
projects/openvla_sae/paper/: outline.md
projects/openvla_sae/scripts/: phase1_commands.sh
projects/openvla_sae/src/: cache_openvla_activations.py  train_sae_from_cache.py
tests/: test_agent.py  test_agent_stack.py  test_audit.py  test_cluster.py  test_critic.py  test_demo.py  test_discovery_loop.py  test_docs_integrity.py  test_extractor.py  test_goal_loop.py  test_hooks.py  test_interp_engine.py  test_knowledge.py  test_language_guard.py  test_memory.py  test_modal_dispatch.py  test_openvla_sae.py  test_ops_registry.py  test_packaging_integrity.py  test_pipeline.py  test_reporting.py  test_retrieval.py  test_sources.py  test_text.py
