[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mechferret"
version = "0.1.0"
description = "Autonomous research control loop with evidence memory, citation synthesis, and local traceability."
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "MechFerret Hackathon Team" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["autoresearch", "agents", "retrieval", "citations", "openai", "modal", "raindrop"]
dependencies = []
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/J0YY/mechferret"
Repository = "https://github.com/J0YY/mechferret"
Issues = "https://github.com/J0YY/mechferret/issues"

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
anthropic = ["anthropic>=0.40.0"]
modal = ["modal>=0.73.0"]
interp = ["torch>=2.0.0", "transformer_lens>=2.0.0"]
all = ["openai>=1.0.0", "anthropic>=0.40.0", "modal>=0.73.0", "torch>=2.0.0", "transformer_lens>=2.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
mechferret = "mechferret.cli:main"
mf = "mechferret.cli:main"

[tool.setuptools.packages.find]
include = ["mechferret*"]

[tool.setuptools.package-data]
mechferret = [
  "py.typed",
  "seed_corpus/*.md",
  "skills/*.json",
  "templates/openvla_sae/README.md",
  "templates/openvla_sae/configs/*.yaml",
  "templates/openvla_sae/paper/*.md",
  "templates/openvla_sae/scripts/*.sh",
  "templates/openvla_sae/src/*.py",
]
